--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ data/original/wave_2_classes_with_irrelevant_attributes.train.arff
 data/original/wave_2_classes_with_irrelevant_attributes.test.arff
 data/original/wave_2_classes_with_irrelevant_attributes.arff
 report/R26094022_李權恩_期中報告.pdf
+test_result.R
